# snaplet-actionlog

./: .gitignore  addSources.sh  changelog.md  schema.txt  snaplet-actionlog.cabal  stack.yaml
resources/templates/: _details.tpl  _form.tpl  _index.tpl  _list.tpl  _show.tpl  index.tpl  show.tpl
src/Snap/Snaplet/: ActionLog.hs
src/Snap/Snaplet/ActionLog/: API.hs  InternalTypes.hs  Resource.hs  Schema.hs  Types.hs
src/Snap/Snaplet/ActionLog/Internal/: Schema.hs
