name:           snaplet-actionlog
version:        0.1
synopsis:       Generic action log snaplet for the Snap Framework
description:    This snaplet contains support for logging website actions.
                Common actions are creating, updating, and deleting records.
license:        BSD3
license-file:   LICENSE
author:         Soostone Inc. Ozgun Ataman, Doug Beardsley
maintainer:     ozataman@gmail.com, mightybyte@gmail.com
build-type:     Simple
cabal-version:  >= 1.6
homepage:       https://github.com/soostone/snaplet-actionlog
category:       Web, Snap

extra-source-files:  LICENSE

data-files:
  schema.txt
  resources/templates/_index.tpl
  resources/templates/_show.tpl

source-repository head
  type:     git
  location: https://github.com/soostone/snaplet-actionlog.git

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.ActionLog

  other-modules:
    Snap.Snaplet.ActionLog.API
    Snap.Snaplet.ActionLog.Resource
    Snap.Snaplet.ActionLog.Types
    Paths_snaplet_actionlog

  build-depends:
    base                       >= 4       && < 5,
    blaze-builder              >= 0.3     && < 0.4,
    bytestring                 >= 0.9.1   && < 0.11,
    digestive-functors         >= 0.6     && < 0.7,
    digestive-functors-heist   >= 0.6.1   && < 0.7,
    digestive-functors-snap    >= 0.6     && < 0.7,
    heist                      >= 0.11.1  && < 0.12,
    persistent                 >= 1.1     && < 1.2,
    persistent-postgresql      >= 1.1     && < 1.2,
    persistent-template        >= 1.1     && < 1.2,
    restful-snap               >= 0.1     && < 0.2,
    snap                       >= 0.11.3  && < 0.12,
    text                       >= 0.11    && < 0.12,
    time                       >= 1.1     && < 1.5,
    snaplet-persistent         >= 0.1     && < 0.2,
    unordered-containers       >= 0.2     && < 0.3,
    xmlhtml                    >= 0.2     && < 0.3


  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind
